feat: add node dev environment setup

--- a/roles/setup/vars/main.yml
+++ b/roles/setup/vars/main.yml
@@ -12,9 +12,12 @@ homebrew:
     - spotify
     - notion
     - hyperkey
+    - tabby
 
   packages:
     - git
+    - nvm
+    - yarn
 
   casks: []
 
